[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/__entity_topdown_player/__entity_topdown_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/entity_player/entity_player.gd" type="Script" id=2]
[ext_resource path="res://addons/regular_polygon2d_node/RegularPolygon2D.gd" type="Script" id=3]
[ext_resource path="res://addons/Trail/trail_2d.gd" type="Script" id=4]
[ext_resource path="res://components/mouse_controller/mouse_controller.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/entity_player/components/entity_player_body.gd" type="Script" id=6]
[ext_resource path="res://entities/entity_player/components/entity_player_entity_mover.gd" type="Script" id=7]
[ext_resource path="res://libs/gt_entity_mover_2d/gt_topdown_entity_mover_2d/gt_topdown_entity_mover_2d.gd" type="Script" id=8]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 1, Vector2( 1, 1 ), 1.0, 0.0, 1, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.921569, 0.341176, 0.537255, 0, 0.921569, 0.341176, 0.537255, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 14.0

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="MouseController" parent="." index="1" instance=ExtResource( 5 )]

[node name="Body" parent="." index="2"]
script = ExtResource( 6 )
actor_path = NodePath("..")

[node name="move_trail" type="Line2D" parent="Body/graphics" index="0"]
width = 28.0
width_curve = SubResource( 1 )
default_color = Color( 0, 0, 0, 1 )
gradient = SubResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}
lifetime = 0.25
distance = 2.0
segments = 40

[node name="rotation_pivot" type="Node2D" parent="Body/graphics" index="1"]
__meta__ = {
"_edit_lock_": true
}

[node name="arrow" type="Polygon2D" parent="Body/graphics/rotation_pivot" index="0"]
color = Color( 0.921569, 0.341176, 0.537255, 1 )
polygon = PoolVector2Array( 0, 16, 0, -16, 7, -14, 36, 0, 7, 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="main" type="Node2D" parent="Body/graphics" index="2"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
centered = true
num_sides = 32
size = 32.0
polygon_color = Color( 0.921569, 0.341176, 0.537255, 1 )

[node name="CollisionShape" parent="Body" index="1"]
visible = false
shape = SubResource( 3 )

[node name="EntityMover" parent="Body" index="2"]
script = ExtResource( 7 )
movement_mode = 1
move_deceleration_time = 0.5

[node name="RecoilMover" type="Node" parent="Body" index="3"]
script = ExtResource( 8 )
body_path = NodePath("..")
max_move_speed = 384
move_acceleration_time = 0.05
move_deceleration_time = 0.5

[connection signal="just_pressed" from="InputController/fire" to="Body" method="_on_fire_just_pressed"]
[connection signal="mouse_position" from="MouseController" to="Body" method="_on_MouseController_mouse_position"]

[editable path="InputController"]
