[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/__entity_topdown_player/__entity_topdown_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/regular_polygon2d_node/RegularPolygon2D.gd" type="Script" id=2]
[ext_resource path="res://entities/entity_player/entity_player.gd" type="Script" id=3]
[ext_resource path="res://components/weapon_component/weapons/bullet_shooter.tres" type="Resource" id=4]
[ext_resource path="res://addons/Trail/trail_2d.gd" type="Script" id=5]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 1, Vector2( 1, 1 ), 1.0, 0.0, 1, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.109804, 0.0784314, 0.0705882, 0, 0.827451, 0.682353, 0.129412, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 14.0

[sub_resource type="CircleShape2D" id=4]
radius = 14.0

[sub_resource type="Animation" id=5]
resource_name = "hurt_enter"
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("Timers/InvincibilityTimer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "hurt_exit"
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("Timers/InvincibilityTimer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 3 )
entity_type = 1

[node name="sprite" type="Node2D" parent="MouseController/CanvasLayer/mouse_pos" index="0"]
modulate = Color( 1, 1, 1, 0.713726 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
centered = true
size = 16.0
polygon_color = Color( 0.831373, 0.788235, 0.764706, 1 )

[node name="move_trail" type="Line2D" parent="Body/graphics" index="0"]
width = 20.0
width_curve = SubResource( 1 )
gradient = SubResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}
lifetime = 0.15
distance = 2.0
segments = 40

[node name="bullet_spawn_pos" type="Position2D" parent="Body/graphics/rotation_pivot" index="0"]
position = Vector2( 30, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="arrow" type="Node2D" parent="Body/graphics/rotation_pivot" index="1"]
position = Vector2( 12, 0 )
scale = Vector2( 1.25, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
centered = true
size = 20.0
polygon_color = Color( 0.827451, 0.682353, 0.129412, 1 )
polygon_rotation = 90.0

[node name="main" type="Node2D" parent="Body/graphics" index="2"]
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
centered = true
num_sides = 4
size = 32.0
polygon_color = Color( 0.827451, 0.682353, 0.129412, 1 )

[node name="CollisionShape" parent="Body" index="1"]
visible = false
shape = SubResource( 3 )

[node name="Weapon" parent="Body" index="2"]
resource = ExtResource( 4 )
projectile_group = "entity_bullet_player_damage_hitbox"
spawn_position_path = NodePath("../graphics/rotation_pivot/bullet_spawn_pos")

[node name="DamageHurtbox" parent="Body/Triggers" index="0" groups=[
"entity_player_damage_hurtbox",
]]
visible = false
collidable_groups = [ "entity_projectile_enemy_damage_hitbox" ]
excluded_groups = [ "entity_projectile_player_damage_hitbox" ]

[node name="CollisionShape" parent="Body/Triggers/DamageHurtbox" index="0"]
shape = SubResource( 4 )

[node name="EntityMover" parent="Body" index="4"]
movement_mode = 1

[node name="StateMachine" parent="." index="5"]
_entity_path = NodePath("..")

[node name="Hurt" parent="StateMachine" index="2"]
anim_name_on_enter = "hurt_enter"
anim_name_on_exit = "hurt_exit"
play_on_enter = true
play_on_exit = true

[node name="Dead" parent="StateMachine" index="3"]
can_move = false
can_shoot = false

[node name="Enter" parent="." index="6"]
anims/hurt_enter = SubResource( 5 )

[node name="Exit" parent="." index="7"]
anims/hurt_exit = SubResource( 6 )

[connection signal="updated_move_direction" from="InputController" to="StateMachine/Idle" method="_on_InputController_updated_move_direction"]
[connection signal="updated_move_direction" from="InputController" to="StateMachine/Move" method="_on_InputController_updated_move_direction"]
[connection signal="just_pressed" from="InputController/shoot" to="StateMachine/Idle" method="_on_shoot_just_pressed"]
[connection signal="just_pressed" from="InputController/shoot" to="StateMachine/Move" method="_on_shoot_just_pressed"]
[connection signal="just_pressed" from="InputController/shoot" to="StateMachine/Hurt" method="_on_shoot_just_pressed"]
[connection signal="just_pressed" from="InputController/shoot" to="StateMachine/Dead" method="_on_shoot_just_pressed"]
[connection signal="pressed" from="InputController/shoot" to="StateMachine/Idle" method="_on_shoot_pressed"]
[connection signal="pressed" from="InputController/shoot" to="StateMachine/Move" method="_on_shoot_pressed"]
[connection signal="pressed" from="InputController/shoot" to="StateMachine/Hurt" method="_on_shoot_pressed"]
[connection signal="pressed" from="InputController/shoot" to="StateMachine/Dead" method="_on_shoot_pressed"]
[connection signal="updated_global_position" from="MouseController" to="." method="_on_MouseController_updated_global_position"]
[connection signal="timeout" from="Timers/InvincibilityTimer" to="StateMachine/Hurt/ToIdle" method="do_transition"]
[connection signal="died" from="Health" to="StateMachine/Idle/ToDead" method="do_transition"]
[connection signal="died" from="Health" to="StateMachine/Move/ToDead" method="do_transition"]
[connection signal="lived" from="Health" to="StateMachine/Move/ToHurt" method="do_transition"]
[connection signal="lived" from="Health" to="StateMachine/Idle/ToHurt" method="do_transition"]
[connection signal="took_damage" from="Body/Triggers/DamageHurtbox" to="Health" method="lose_health"]
[connection signal="started_moving" from="StateMachine/Idle" to="StateMachine/Idle/ToMove" method="do_transition"]
[connection signal="stopped_moving" from="StateMachine/Move" to="StateMachine/Move/ToIdle" method="do_transition"]

[editable path="MouseController"]
